# fdm-d2e-reproduction

./: .dockerignore  .env_sample  .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
docker/: Dockerfile  build_cluster_image.sh
docs/: ablation_scaling.md  artifact_contracts.md  auxiliary_data_plan.md  baselines_statistics.md  cluster_runbook.md  d2e_full_data_universe.md  d2e_full_fdm_pipeline.md  d2e_full_idm_pipeline.md  d2e_full_split_contract.md  d2e_real_ingestion.md  d2e_source_contract.md  dataset_license.md  evidence_index.md  experiment_log.md  failure_analysis.md  fdm1_d2e_g002_data_contract.md  fdm1_d2e_research_contract.md  fdm_research_track.md  final_quality_gates.md  final_research_report.md  g003_progress_monitoring.md  g006_evaluation_readiness.md  gidm_baseline_contract.md  harness_selection_and_execution.md  idm_exploration_plan.md  idm_research_track.md  live_open_game_suite.md  mlxp_resource_plan.md  reproducibility_runbook.md  reproduction_scope.md  runtime_sdk_adapter.md  source_validation.md
notes/: fdm-d2e-full-reproduction-deep-interview.md  fdm-d2e-full-reproduction-ralplan.md  g003-mlxp-run-status.md  g004-mlxp-run-status.md  g005-event-state-duration-context-negative-evidence.md  g005-idm-alignment-diagnostics.md  g005-mlxp-run-status.md  g005-state-token-idm-failure.md  gpu-utilization-operating-rule.md  safe-restart-g004-handoff.md  session-handoff-20260530-g005-offsetensemble.md  ultragoal-operating-notes.md
schemas/: action_vocab.schema.json  d2e_window_record.schema.json  data_manifest.schema.json  metrics.schema.json  (+11 more)
(+2498 files in other folders)
